src/test/ui/error-codes/E0505.stderr
error[E0505]: cannot move out of `x` because it is borrowed
  --> $DIR/E0505.rs:19:13
   |
18 |         let _ref_to_val: &Value = &x;
   |                                    - borrow of `x` occurs here
19 |         eat(x); //~ ERROR E0505
   |             ^ move out of `x` occurs here

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0505"
